--- a/overlay-lineage/frameworks/base/packages/SystemUI/res/values/cr_config.xml
+++ b/overlay-lineage/frameworks/base/packages/SystemUI/res/values/cr_config.xml
@@ -15,6 +15,9 @@
      limitations under the License.
 -->
 <resources>
+    <!-- If not zero, limits the internal screen recorder's framerate to the set value. -->
+    <integer name="config_screenRecorderMaxFramerate">90</integer>
+
     <!-- The CPU temperature sensor path, defaults to empty -->
     <string name="config_cpuTempSensor" translatable="false">/sys/class/thermal/thermal_zone39/temp</string>
 
