--- a/overlay/frameworks/base/core/res/res/values/dimens.xml
+++ b/overlay/frameworks/base/core/res/res/values/dimens.xml
@@ -18,10 +18,7 @@
 */
 -->
 <resources>
-
-    <!-- Height of the status bar.
-         Do not read this dimen directly. Use {@link SystemBarUtils#getStatusBarHeight} instead.
-         -->
+    <!-- The default height of the status bar used in to calculate the status bar height. -->
     <dimen name="status_bar_height_default">106.0px</dimen>
 
     <!-- Height of the status bar in portrait -->
