--- a/overlay/frameworks/base/core/res/res/values/cr_config.xml
+++ b/overlay/frameworks/base/core/res/res/values/cr_config.xml
@@ -9,4 +9,7 @@
 
      <!-- Whether device has turbo power charging support -->
      <bool name="config_hasTurboPowerCharger">true</bool>
+
+     <!-- Path to fast charging status file to detect whether an oem fast charger is active -->
+     <string name="config_oemFastChargerStatusPath" translatable="false">/sys/class/power_supply/bms/fastcharge_mode</string>
 </resources>
