spes: ArrowOS bringup
Change-Id: I86fa458a3bf9db88f7b8133600d6fe12ea1bfc2b
Signed-off-by: Kajal4414 <81718060+Kajal4414@users.noreply.github.com>

--- a/overlay/frameworks/base/core/res/res/values/dimens.xml
+++ b/overlay/frameworks/base/core/res/res/values/dimens.xml
@@ -14,4 +14,7 @@
 
     <!-- Adjustment for software rounded corners since corners aren't perfectly round. -->
     <dimen name="rounded_corner_radius_adjustment">22px</dimen>
+
+    <!-- for 20dp of padding at 3.5px/dp at default density -->
+    <dimen name="rounded_corner_content_padding">55px</dimen>
 </resources>
