Revert "spes: ArrowOS bringup"
This reverts commit cef945ea3ec26da92a4612aaadf384eb8ed2a31c.

Change-Id: If56ac9c7a1df82edb9b6a8659047b56ef50a2c6e
Signed-off-by: Kajal4414 <81718060+Kajal4414@users.noreply.github.com>

--- a/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
@@ -6,6 +6,9 @@
     <!-- the padding on the end of the statusbar -->
     <dimen name="status_bar_padding_end">2dp</dimen>
 
+    <!-- for 20dp of padding at 3.5px/dp at default density -->
+    <dimen name="rounded_corner_content_padding">55px</dimen>
+
     <!-- The padding on the top of the statusbar (usually 0) -->
     <dimen name="status_bar_padding_top">1.5dp</dimen>
 
